--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <script src="style/style.js"></script>
+    <script src="style/script.js"></script>
     <title>Document</title>
 </head>
 <body>
 <h1>A high-level definition</h1>
-<p>Player 1: Chris</p>
+<body>
+  <p>Player 1: Chris</p>
 
+  <script>
+const para = document.querySelector('p');
 
+para.addEventListener('click', updateName);
 
-
+function updateName() {
+  let name = prompt('Enter a new name');
+  para.textContent = 'Player 1: ' + name;
+}
+  </script>
 </body>
 </html>     
