del script in html transfer to script.js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <script src="style/script.js"></script>
+    <script src="script/script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,32 +12,5 @@
 <body>
   <p>Player 1: Chris</p>
   <button class='btn'>Click me</button>
-  <script>
-//First script - change Chris to your name first script - 
-const para = document.querySelector('p');
-
-para.addEventListener('click', updateName);
-
-function updateName() {
-  let name = prompt('Enter a new name');
-  para.textContent = 'Player 1: ' + name; 
-}
-
-//Secpn script : - just add text after press button : 'Ти натиснув кнопку!' - 
-
-document.addEventListener("DOMContentLoaded", function() {
-  function createParagraph() {
-    let para = document.createElement('p');
-    para.textContent = 'Ти натиснув кнопку!';
-    document.body.appendChild(para);
-  }
-
-  const buttons = document.querySelectorAll('button');
-
-  for(let i = 0; i < buttons.length ; i++) {
-    buttons[i].addEventListener('click', createParagraph);
-  }
-});
-  </script>
 </body>
 </html>     
